<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="dev.sertan.android.harcamatakip.util.Converter" />

        <import type="dev.sertan.android.harcamatakip.data.model.Currency" />

        <import type="dev.sertan.android.harcamatakip.data.model.SpendCategory" />

        <variable
            name="viewModel"
            type="dev.sertan.android.harcamatakip.viewmodel.AddExpsenseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal_s">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_m"
            android:text="@string/add_expense"
            android:textAlignment="center"
            android:textSize="@dimen/text_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_m"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLength="100"
            android:text="@={viewModel.expense.desc}"
            app:layout_constraintBottom_toTopOf="@id/cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_m"
            android:hint="@string/expense"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:text="@={Converter.doubleToString(viewModel.expense.cost)}"
            app:layout_constraintBottom_toTopOf="@id/currencies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc" />

        <HorizontalScrollView
            android:id="@+id/currencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_m"
            android:overScrollMode="ifContentScrolls"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/expense_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.isCurrency(Currency.LIRA)}"
                    android:onClick="@{() -> viewModel.updateCurrency(Currency.LIRA)}"
                    android:text="@string/lira" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.isCurrency(Currency.EURO)}"
                    android:onClick="@{() -> viewModel.updateCurrency(Currency.EURO)}"
                    android:text="@string/euro" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.isCurrency(Currency.DOLLAR)}"
                    android:onClick="@{() -> viewModel.updateCurrency(Currency.DOLLAR)}"
                    android:text="@string/dollar" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{viewModel.isCurrency(Currency.POUND)}"
                    android:onClick="@{() -> viewModel.updateCurrency(Currency.POUND)}"
                    android:text="@string/pound" />
            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <RadioGroup
            android:id="@+id/expense_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_m"
            app:layout_constraintBottom_toTopOf="@id/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currencies">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCategory(SpendCategory.SHOP)}"
                android:onClick="@{() -> viewModel.updateCategory(SpendCategory.SHOP)}"
                android:text="@string/shop" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCategory(SpendCategory.RENT)}"
                android:onClick="@{() -> viewModel.updateCategory(SpendCategory.RENT)}"
                android:text="@string/rent" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCategory(SpendCategory.BILL)}"
                android:onClick="@{() -> viewModel.updateCategory(SpendCategory.BILL)}"
                android:text="@string/bill" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.isCategory(SpendCategory.OTHER)}"
                android:onClick="@{() -> viewModel.updateCategory(SpendCategory.OTHER)}"
                android:text="@string/other" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> viewModel.saveExpense(view)}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>