<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_large"
        android:layout_marginTop="@dimen/size_large"
        android:layout_marginEnd="@dimen/size_large"
        android:text="@string/profile_settings"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Name -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_large"
        android:background="@drawable/bg_input_text"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="@dimen/size"
        android:textSize="@dimen/text_common"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!-- Bill type -->
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size"
        android:checkedButton="@id/unanswered"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/name">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/unanswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unanswered" />

    </RadioGroup>

    <!-- Add expense -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/size"
        android:layout_marginBottom="@dimen/size_large"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>