<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="dev.sertan.android.harcamatakip.data.model.Currency" />

        <variable
            name="viewModel"
            type="dev.sertan.android.harcamatakip.viewmodel.HomeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_m"
                android:onClick="@{(view) -> viewModel.goToSettingsFragment(view)}"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/normal_s"
                    android:paddingVertical="@dimen/normal_m">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/hello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello"
                        android:textSize="@dimen/text_m"
                        app:layout_constraintBottom_toTopOf="@id/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="@dimen/text_m"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/total_expense"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hello"
                        app:userName="@{viewModel.user}"
                        tools:text="Sertan Bey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/spending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/your_spending"
                        android:textSize="@dimen/text_m"
                        app:layout_constraintBottom_toTopOf="@id/total_expense"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/total_expense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/text_m"
                        app:currency="@{viewModel.user.baseCurrency}"
                        app:exchangeRate="@{viewModel.exchangeRate}"
                        app:expenses="@{viewModel.expenses}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/name"
                        app:layout_constraintTop_toBottomOf="@id/spending"
                        tools:text="₺9080" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="ifContentScrolls"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isCurrency(Currency.LIRA)}"
                        android:onClick="@{() -> viewModel.updateCurrency(Currency.LIRA)}"
                        android:text="@string/lira" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isCurrency(Currency.POUND)}"
                        android:onClick="@{() -> viewModel.updateCurrency(Currency.POUND)}"
                        android:text="@string/pound" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isCurrency(Currency.EURO)}"
                        android:onClick="@{() -> viewModel.updateCurrency(Currency.EURO)}"
                        android:text="@string/euro" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.isCurrency(Currency.DOLLAR)}"
                        android:onClick="@{() -> viewModel.updateCurrency(Currency.DOLLAR)}"
                        android:text="@string/dollar" />
                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expenses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:transitionGroup="true"
            app:currency="@{viewModel.user.baseCurrency}"
            app:exchangeRate="@{viewModel.exchangeRate}"
            app:expenses="@{viewModel.expenses}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_dodgeInsetEdges="top"
            app:reverseLayout="true"
            app:stackFromEnd="true" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_s"
            android:layout_marginBottom="@dimen/normal_s"
            android:contentDescription="@string/add"
            android:onClick="@{(view) -> viewModel.goToAddExpenseFragment(view)}"
            app:layout_anchor="@id/expenses"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_add" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>